--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,12 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@utility container {
+  margin-inline: auto;
+  padding-inline: 1rem;
+  @apply max-w-[1352px];
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
